--- a/src/components/Tip/styles.module.css
+++ b/src/components/Tip/styles.module.css
@@ -2,6 +2,8 @@
   width: 100%;
   background-color: #ebebfc;
   color: #4f4fb9;
+  border-radius: 0.62rem;
+  padding: 1rem;
   display: flex;
   align-items: center;
   gap: 1rem;
